--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 } 
 body
 {
-    background: #222831; /*rgb(112, 125, 129) */
+    background: #616161; /*rgb(112, 125, 129) */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,12 +24,12 @@ body
     margin: 50px;
     display: grid;
     grid-template-columns: 1fr 2fr;
-    box-shadow: 0 35px 55px rgba(0,0,0,0.1);
+    box-shadow: 0 35px 55px rgba(0,0,0,0.7);
 }
 .container .left_side
 {
     position: relative;
-    background: #393e46; /*#003147*/
+    background: #F0EFEF; /*#003147*/
     padding: 40px;
 }
 .profileText
@@ -60,7 +60,7 @@ body
 }
 .profileText h2
 {
-    color: #fff;
+    color: #0B0A0A;
     font-size: 1.5em;
     margin-top: 20px;
     text-transform: uppercase;
@@ -79,7 +79,7 @@ body
 }
 .title
 {
-    color: #fff;
+    color: #0B0A0A;
     text-transform: uppercase;
     font-weight: 600;
     letter-spacing: 1px;
@@ -102,11 +102,11 @@ body
     display: inline-block;
     width: 30px;
     font-size: 18px;
-    color: #03a9f4; /*#fd7014 */
+    color: #0B0A0A; /*#fd7014 */
 }
 .contactInfo ul li span
 {
-    color: #fff;
+    color: #403A3A;
     font-weight: 300;
 }
 .contactInfo.education li
@@ -115,17 +115,17 @@ body
 }
 .contactInfo.education li h5
 {
-    color: #03a9f4; /* #fd7014*/
+    color: #0B0A0A; /* #fd7014*/
     font-weight: 500;
 }
 .contactInfo.education li h4:nth-child(2)
 {
-    color: #fff;
+    color: #403A3A;
     font-weight: 500;
 }
 .contactInfo.education li h4
 {
-    color: #fff;
+    color: #403A3A;
     font-weight: 300;
 }
 .contactInfo.language .percent
@@ -133,7 +133,7 @@ body
     position: relative;
     width: 100%;
     height: 6px;
-    background: #eeeeee; /*#222831 #081921*/
+    background: #707070; /*#222831 #081921*/
     display: block;
     margin-top: 5px;
 }
@@ -143,12 +143,12 @@ body
     top: 0;
     left: 0;
     height: 100%;
-    background: #03a9f4; /*#fd7014*/
+    background: #0B0A0A; /*#fd7014*/
 }
 .container .right_side
 {
     position: relative;
-    background: #eeeeee; /*#fff*/
+    background: #FCFCFC; /*#fff*/
     padding: 40px;
 }
 .about
@@ -161,14 +161,14 @@ body
 }
 .title2
 {
-    color: #222831 ; /*#222831 #2a7da2 #393e46 #003147*/
+    color: #0B0A0A ; /*#222831 #2a7da2 #393e46 #003147*/
     text-transform: uppercase;
     letter-spacing: 1px;
     margin-bottom: 10px;
 }
 p
 {
-    color: #333;
+    color: #403A3A;
 }
 .about .box
 {
@@ -183,13 +183,13 @@ p
 .about .box .year_company h5
 {
     text-transform: uppercase;
-    color: #333; /*#848c90*/
+    color: #403A3A; /*#848c90*/
     font-weight: 600;
 }
 .about .box .text h4
 {
     text-transform: uppercase;
-    color: #2a7da2; /*#fd7014*/
+    color: #0B0A0A; /*#fd7014*/
     font-size: 16px;
 }
 .skills .box
@@ -204,7 +204,7 @@ p
 .skills .box h4
 {
     text-transform: uppercase;
-    color: #333; /* #848c99*/
+    color: #403A3A; /* #848c99*/
     font-weight: 500;
 }
 .skills .box .percent
@@ -212,7 +212,7 @@ p
     position: relative;
     width: 100%;
     height: 10px;
-    background: #dbd8e3; /* #f0f0f0 #393e46  #222831*/
+    background: #707070; /* #f0f0f0 #393e46  #222831*/
 }
 .skills .box .percent div
 {
@@ -220,7 +220,7 @@ p
     top: 0;
     left: 0;
     height: 100%;
-    background: #03a9f4; /*#fd7014*/
+    background: #0B0A0A; /*#fd7014*/
 }
 .interests ul
 {
@@ -230,13 +230,13 @@ p
 .interests ul li
 {
     list-style: none;
-    color: #333; /**/
+    color: #403A3A; /**/
     font-weight: 500;
     margin: 10px 0;
 }
 .interests ul li .fa
 {
-    color:#03a9f4; /*#fd7014*/
+    color:#0B0A0A; /*#fd7014*/
     font-size: 18px;
     width: 20px;
 }
@@ -277,9 +277,9 @@ p
 }
 a
 {
-    color: #fff;
+    color: #403A3A;
 }
 a:visited, a:hover, a:active, a:focus
 {
-    color: #fff;
+    color: #707070;
 }
